os-compsec-4/2011/remarks/scraftworld.txt
2011.12.01.22.15.46

Задача 0. Отлично :) Вижу в логах совместную работу.

Задача 1. (1) Вообще в хранилище исходных файлов не должно быть бинарных
файлов, они и место занимают, и ни к чему там. Надо бы их оттуда убрать. Про
то, как это сделать можно прочитать здесь (перевод Git magic):

	http://dl.dropbox.com/u/281916/delete/book.pdf

Вам нужно посмотреть на filter-branch --tree-filter

(2) Ваша программа не компилируется, вот какие ошибки я получаю:

filewrk.cpp:84:11: error: no matching conversion for functional-style cast from 'const char [17]' to 'std::exception'
                                throw(exception("Bad file content"));
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from filewrk.cpp:3:
In file included from /usr/include/c++/clang-2.9/vector:61:
In file included from /usr/include/c++/clang-2.9/bits/allocator.h:48:
In file included from /usr/include/c++/clang-2.9/x86_64-unknown-linux-gnu/bits/c++allocator.h:34:
In file included from /usr/include/c++/clang-2.9/ext/new_allocator.h:33:
In file included from /usr/include/c++/clang-2.9/new:41:
/usr/include/c++/clang-2.9/exception:60:9: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'const char [17]' to 'const std::exception' for 1st argument
  class exception
        ^
/usr/include/c++/clang-2.9/exception:63:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    exception() throw() { }
    ^
1 error generated.

(3) И по исходным текстам, кажется, что она не решает поставленную задачу, ведь,
было оговорено, что из-за некорректных файлов или из-за некорректного их
содержимого, она не должна прекращать обработку оставшихся данных.

Задача 2. (1) Исходный текст на Perl плохо отформатирован. Это на оценку не
повлияет, но всё же, за этим надо следить. (2) А почему Вы так странно ищете
сигнатуру? Perl разве не может искать просто два последовательных байта? Если
не умеет, тогда понятно. Но Perl тогда очень странный. (3) А вот это настоящий
недочёт. Ибо, почему программа написана с расчётом на то, что первые же
байты 0xaa 0x55 окажутся сигнатурой загрузочного сектора? Может же всякое
случиться. По идее, надо бы отыскать все такие возможные блоки, а потом
выбрать один из них.

Задача 3. Недурно, но есть замечания. (1) Почему Вы предполагаете, что
процессор сможет выполнить 32-битовый код, вроде 'mov ecx, 0'? Это в общем-то
никак не гарантируется даже для некоторых современных x86-ых. Программа либо
должна быть целиком 16-ти битовой, или содержать проверку того, что процессор
позволяет выполнять такие инструкции. Установить это можно по регистру флагов,
это описано здесь:

	http://en.wikipedia.org/wiki/EFLAGS

(2) Вычисление CRC32 по таблице - это оптимизация. Скорость же в загрузочном
секторе не особо важна, но важен объём кода и его простота. Поэтому лучше бы
сделать расчёт CRC32 самым простым циклом, у которого и 16-битовый довольно
просто написать. Но это так, пожелание. Не пойдёт в минус.

(3) А правильно ли у Вас загружается блок данных? Был ли код протестирован?
Потому что, код загрузки я нашёл в одном только месте и там данные загружаются
по адресу crctab, а эта память потом перезаписывается.

(4) int 0x13 (соответствующая функция) позволяет считывать данные только с
одной дорожки. А у Вас нигде не проверяется, что предоставленный для обработки
файл длиной 62 оставшихся для работы сектора (ну, если не развивать мысль о
загрузчике для больших файлов) не помещается. То что, было сказано, что файл
будет меньше 30K, ещё не означает, что глупый пользователь не передал файл
больше.

Задача 4. (1) Разве в tilemul производится умножение матриц, расположенных
тайлами? Если я не ошибаюсь, там происходит умножение блоков, из которых
состоят матрицы друг на друга. Или я ошибаюсь? Но, кажется, нет. Ведь,
каждое i:j для матрицы результата встречается один раз, и для вычисления
этого элемента используются кусочки строки и столбца длиной по 32 элемента.

(2) Не забывайте, что говорилось об оптимизаторах в компиляторах. О том, что
они могут выкинуть код из программы, который не выводит ничего вовне.

Задача 5. (1) Нужно, чтобы функция, печатающая результат операции над числами в
ассемблерной функции вызывалась из этой ассемблерной функции. (2) Исполняемые и
объектные файлы в хранилище - это не то, что нужно. Лучше запишите в него файл
с командами для компиляции и сборки программы.
